Extend BasePropsConfig