@@ -28,13 +28,13 @@ import org.apache.marmotta.ldclient.api.endpoint.Endpoint;
 import org.apache.marmotta.ldclient.api.provider.DataProvider;
 import org.apache.marmotta.ldpath.api.functions.SelectorFunction;
 import org.apache.marmotta.ldpath.backend.linkeddata.LDCacheBackend;
+import org.fcrepo.camel.common.config.BasePropsConfig;
 import org.fcrepo.client.FcrepoHttpClientBuilder;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 
 import java.nio.file.Path;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Set;
 
@@ -46,22 +46,7 @@ import static java.util.Collections.EMPTY_SET;
  * @author dbernstein
  */
 @Configuration
-public class FcrepoLdPathConfig {
-
-    @Value("${fcrepo.baseUrl:http://localhost:8080/fcrepo/rest}")
-    private String fcrepoBaseUrl;
-
-    @Value("${fcrepo.authUsername:fedoraAdmin}")
-    private String fcrepoUsername;
-
-    @Value("${fcrepo.authPassword:fedoraAdmin}")
-    private String fcrepoPassword;
-
-    @Value("${fcrepo.authHostName:localhost}")
-    private String fcrepoAuthHost;
-
-    @Value("${fcrepo.authPort:8080}")
-    private int fcrepoAuthPort;
+public class FcrepoLdPathConfig extends BasePropsConfig {
 
     @Value("${fcrepo.cache.timeout:0}")
     private long fcrepoCacheTimeout;
@@ -100,14 +85,19 @@ public class FcrepoLdPathConfig {
         return ldpathTransformPath;
     }
 
-
     @Bean("ldpath")
     public LDPathWrapper ldpath() throws Exception {
+        final var fcrepoBaseUrl = getFcrepoBaseUrl();
+        final var fcrepoAuthHost = getFcrepoAuthHost();
+        final var fcrepoAuthPort = getFcrepoAuthPort();
+        final var fcrepoUsername = getFcrepoUsername();
+        final var fcrepoPassword = getFcrepoPassword();
+
         final AuthScope authScope = new AuthScope(fcrepoAuthHost, fcrepoAuthPort);
         final Credentials credentials = new UsernamePasswordCredentials(fcrepoUsername, fcrepoPassword);
-        final List<Endpoint> endpoints = Arrays.asList(new FedoraEndpoint(fcrepoBaseUrl, fcrepoCacheTimeout));
+        final List<Endpoint> endpoints = List.of(new FedoraEndpoint(fcrepoBaseUrl, fcrepoCacheTimeout));
         final var fcrepoHttpClientBuilder = new FcrepoHttpClientBuilder(fcrepoUsername, fcrepoPassword, fcrepoAuthHost);
-        final List<DataProvider> providers = Arrays.asList(new FedoraProvider(fcrepoHttpClientBuilder));
+        final List<DataProvider> providers = List.of(new FedoraProvider(fcrepoHttpClientBuilder));
         final var client = ClientFactory.createClient(authScope, credentials, endpoints, providers);
         final var config = new CacheConfiguration(client);
         config.setDefaultExpiry(cacheTimeout);
@@ -127,6 +117,5 @@ public class FcrepoLdPathConfig {
     public LDPathRouter ldPathRouter() {
         return new LDPathRouter();
     }
-
 
 }
